# blocklist

./: .env  Cargo.toml  blist.txt
migrations/2025-12-04-154854-0000_init/: down.sql  up.sql
src/: error.rs  main.rs  pool.rs
src/database/: error.rs  init.rs  mod.rs  models.rs  schema.rs
src/forms/: blocklist.rs  mod.rs
src/handlers/: blocklist.rs
src/templates/: error.rs
